Update ML v9 and connect patient progress and notifications
